[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-mcp-server"
version = "1.0.9"
description = "Real-time weather query MCP server based on HelloAgents framework"
license = {text = "MIT"}
authors = [{name = "jack6249"}]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "fastmcp>=0.1.0",
    "smithery>=0.3.1"
]

[project.urls]
Homepage = "https://github.com/jack6249/weather-mcp-server"

[tool.smithery]
displayName = "Weather MCP Server"
description = "Real-time weather query MCP server"
author = "jack6249"
homepage = "https://github.com/jack6249/weather-mcp-server"
license = "MIT"
categories = ["weather", "data"]
tags = ["weather", "real-time", "helloagents", "wttr"]
[tool.smithery.startCommand]
type = "stdio"
command = "python"
args = ["server.py"]

# 修正：tools 改为列表格式，每个工具显式声明 name 和 description
[[tool.smithery.tools]]
name = "get_weather"
description = "Get current weather for a city (parameter: Chinese city name)"

[[tool.smithery.tools]]
name = "list_supported_cities"
description = "List all supported cities (returns Chinese city names)"

[[tool.smithery.tools]]
name = "get_server_info"
description = "Get metadata information of the weather server"