[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-mcp-server"
version = "1.0.11"
description = "Real-time weather query MCP server based on HelloAgents framework"
license = {text = "MIT"}
authors = [{name = "jack6249"}]
requires-python = ">=3.10"
# 依赖与之前保持一致，确保平台要求的smithery版本
dependencies = [
    "requests>=2.31.0",
    "fastmcp>=0.1.0",
    "smithery>=0.3.1"
]

[project.urls]
Homepage = "https://github.com/jack6249/weather-mcp-server"

[tool.smithery]
displayName = "Weather MCP Server"
description = "Real-time weather query MCP server"
author = "jack6249"
homepage = "https://github.com/jack6249/weather-mcp-server"
license = "MIT"
categories = ["weather", "data"]
tags = ["weather", "real-time", "helloagents", "wttr"]
# 关键修改：添加-u参数（Python无缓冲模式），避免输出缓存
[tool.smithery.startCommand]
type = "stdio"
command = "python"
args = ["-u", "server.py"]
# 已删除手动工具定义，依赖smithery自动反射代码中的工具信息