[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-mcp-server"
version = "1.0.23"
description = "Real-time weather query MCP server based on HelloAgents framework"
license = {text = "MIT"}
authors = [{name = "jack6249"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "fastmcp>=0.1.0",
    "smithery>=0.3.1"
]

[project.urls]
Homepage = "https://github.com/jack6249/weather-mcp-server"

[tool.smithery]
displayName = "Weather MCP Server"
description = "Real-time weather query MCP server"
author = "jack6249"
homepage = "https://github.com/jack6249/weather-mcp-server"
license = "MIT"
categories = ["weather", "data"]
tags = ["weather", "real-time", "helloagents", "wttr"]
[tool.smithery.startCommand]
type = "stdio"
command = "python"
args = ["-u", "server.py"]  # 保留无缓冲参数

# 恢复工具定义（列表格式，符合Smithery要求）
[[tool.smithery.tools]]
name = "get_weather"
description = "Get current weather for a city (parameter: Chinese city name)"

[[tool.smithery.tools]]
name = "list_supported_cities"
description = "List all supported cities (returns Chinese city names)"

[[tool.smithery.tools]]
name = "get_server_info"
description = "Get metadata information of the weather server"